# Quaternion

./: CMakeLists.txt  README.md
src/: main.c
src/quaternion/: quaternion.c  quaternion.h
